--- a/outils/index.html
+++ b/outils/index.html
@@ -117,6 +117,12 @@
         <div class="title">⭕️ Disques maker</div>
         <p class="desc">Générateur de disques (fractions) </p>
       </a>
+
+      <a class="card" href="generateur_rekenrek.html" data-color="7">
+        <div class="title">🔴⚪️ Générateur Rekenrek</div>
+        <p class="desc">Outil interactif TBI et générateur de cartes à imprimer.</p>
+      </a>
+
     </section>
     
   </main>
