--- a/outils/index.html
+++ b/outils/index.html
@@ -119,8 +119,8 @@
       </a>
 
       <a class="card" href="generateur_rekenrek.html" data-color="7">
-        <div class="title">🔴⚪️ Générateur Rekenrek</div>
-        <p class="desc">Outil interactif TBI et générateur de cartes à imprimer.</p>
+        <div class="title">🔴⚪️ Générateur cartes Rekenrek </div>
+        <p class="desc">Boulier 100 avec autocorrection</p>
       </a>
 
     </section>
