--- a/outils/index.html
+++ b/outils/index.html
@@ -119,7 +119,7 @@
       </a>
 
       <a class="card" href="generateur_rekenrek.html" data-color="7">
-        <div class="title">🔴⚪️ Générateur cartes Rekenrek </div>
+        <div class="title">🔴🔵 Générateur cartes Rekenrek </div>
         <p class="desc">Boulier 100 avec autocorrection</p>
       </a>
 
