--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-<title>Boulier Rekenrek - Version Finale</title>
+<title>Boulier Rekenrek - Multi-Support</title>
 <style>
   :root {
     --bg: #1a1a1a;
@@ -21,39 +21,44 @@
     overflow: hidden; touch-action: none;
   }
 
-  /* Toolbar sans barres verticales, espaces uniformes */
+  /* Toolbar adaptative */
   .toolbar {
-    position: absolute; top: 0; left: 0; right: 0; height: auto; min-height: 65px;
+    position: absolute; top: 0; left: 0; right: 0; height: auto; min-height: 60px;
     background: var(--ui); display: flex; flex-wrap: wrap; align-items: center; 
-    justify-content: center; gap: 30px; z-index: 1000; padding: 5px 20px;
+    justify-content: center; gap: 15px; z-index: 1000; padding: 5px 10px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.5);
   }
 
-  .toolbar-group {
-    display: flex; align-items: center; gap: 10px;
-  }
+  .toolbar-group { display: flex; align-items: center; gap: 8px; }
 
   .btn {
-    border: none; background: #444; color: white; padding: 8px 12px;
-    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 13px;
+    border: none; background: #444; color: white; padding: 6px 10px;
+    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 12px;
   }
   .btn.active { background: var(--accent); outline: 2px solid white; }
   .btn-clear { background: #722; }
 
+  /* Conteneur principal */
   #main-container {
     position: relative; width: 100vw; height: 100vh;
     display: flex; flex-direction: column; align-items: center;
-    justify-content: center; 
+    justify-content: center;
   }
 
-  /* Valeur descendue pour ne pas être cachée par la barre du haut */
+  /* LE SCALER : Permet de réduire tout le bloc sans changer le code interne */
+  #scaler {
+    display: flex; flex-direction: column; align-items: center;
+    transform-origin: center center;
+    transition: transform 0.2s ease;
+  }
+
   #total-display { 
     font-size: 46px; font-weight: bold; color: var(--accent); 
-    z-index: 600; min-height: 60px; margin-top: 40px; margin-bottom: 5px;
+    min-height: 50px; margin-bottom: 5px; text-shadow: 0 2px 4px black;
   }
 
   #abacus-frame {
-    position: relative; width: 820px; z-index: 10;
+    position: relative; width: 820px; /* Largeur préservée */
     border-left: 30px solid var(--wood); border-right: 30px solid var(--wood);
     pointer-events: none;
   }
@@ -82,6 +87,7 @@
   .bead.white { background: radial-gradient(circle at 30% 30%, var(--bead-white), #bbb); }
   .bead.blue-mode.white { background: radial-gradient(circle at 30% 30%, var(--bead-blue), #0d47a1); }
 
+  /* Canvas plein écran pour le dessin */
   #draw-layer { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 500; pointer-events: none; }
   #draw-layer.active { pointer-events: auto; cursor: crosshair; }
   
@@ -93,22 +99,19 @@
 
 <div class="toolbar">
   <div class="toolbar-group">
-    <input type="range" id="row-range" min="1" max="10" value="10" style="width:80px">
-    <span id="row-val" style="font-weight:bold; font-size:16px; color:var(--accent)">10</span>
+    <input type="range" id="row-range" min="1" max="10" value="10" style="width:60px">
+    <span id="row-val" style="font-weight:bold; font-size:14px; color:var(--accent)">10</span>
   </div>
-
   <div class="toolbar-group">
     <button class="btn" onclick="allTo(0)">0</button>
     <button class="btn" onclick="set50()">50</button>
     <button class="btn" onclick="allTo(10)">100</button>
   </div>
-
   <div class="toolbar-group">
     <button class="btn" id="btn-color" onclick="toggleColorMode()">🔵 Bleu</button>
     <button class="btn" id="btn-cache" onclick="toggleCache()">🌑 Cache</button>
     <button class="btn" id="btn-val" onclick="toggleVal()">Valeur</button>
   </div>
-
   <div class="toolbar-group" style="gap:10px">
     <button class="btn" id="btn-pen" onclick="togglePen()">✏️ Stylo</button>
     <div class="color-dot active" style="background:#0f6cf9" onclick="setCol('#0f6cf9', this)"></div>
@@ -119,9 +122,11 @@
 </div>
 
 <div id="main-container">
-  <div id="total-display"></div>
-  <div id="abacus-frame">
-    <div id="cache-curtain"></div>
+  <div id="scaler">
+    <div id="total-display"></div>
+    <div id="abacus-frame">
+      <div id="cache-curtain"></div>
+    </div>
   </div>
   <canvas id="draw-layer"></canvas>
 </div>
@@ -129,69 +134,56 @@
 <script>
   const frame = document.getElementById('abacus-frame');
   const canvas = document.getElementById('draw-layer');
+  const scaler = document.getElementById('scaler');
   const ctx = canvas.getContext('2d');
   const totalDiv = document.getElementById('total-display');
   const cache = document.getElementById('cache-curtain');
   
-  let rowsCount = 10;
-  let showVal = false, isPen = false, isBlue = false, isCache = false;
-  let penCol = '#0f6cf9';
-  let states = Array.from({length: 10}, () => 0); 
+  let rowsCount = 10, showVal = false, isPen = false, isBlue = false, isCache = false, currentScale = 1;
+  let penCol = '#0f6cf9', states = Array.from({length: 10}, () => 0); 
 
   const BEAD_W = 38, GAP = 2, FRAME_W = 820;
 
   function init() {
-    const curCacheWidth = cache.style.width;
+    const curWidth = cache.style.width;
     frame.innerHTML = '';
     frame.appendChild(cache);
     cache.onpointerdown = startCacheDrag;
-    if (isCache) cache.style.width = curCacheWidth || "120px";
+    if (isCache) cache.style.width = curWidth || "120px";
 
     for (let r = 0; r < rowsCount; r++) {
-      const row = document.createElement('div');
-      row.className = 'row';
-      row.dataset.row = r;
+      const row = document.createElement('div'); row.className = 'row'; row.dataset.row = r;
       row.innerHTML = `<div class="rod"></div>`;
       for (let b = 0; b < 10; b++) {
         const bead = document.createElement('div');
         const isRed = (r < 5) ? (b < 5) : (b >= 5);
         bead.className = `bead ${isRed ? 'red' : 'white'} ${isBlue ? 'blue-mode' : ''}`;
-        bead.dataset.idx = b;
-        bead.onpointerdown = startDrag;
+        bead.dataset.idx = b; bead.onpointerdown = startDrag;
         row.appendChild(bead);
       }
       frame.appendChild(row);
     }
-    resizeCanvas();
+    autoScale();
     updateBeads(false);
   }
 
-  function toggleCache() {
-    isCache = !isCache;
-    cache.style.display = isCache ? 'block' : 'none';
-    if(isCache && !cache.style.width) cache.style.width = "120px";
-    document.getElementById('btn-cache').classList.toggle('active', isCache);
+  // --- NOUVEAU : AUTO-SCALING POUR IPAD ET MOBILE ---
+  function autoScale() {
+    const abacusFullWidth = 820 + 60; // Frame + Wood blocks
+    const margin = 20;
+    const availableW = window.innerWidth - margin;
+    const availableH = window.innerHeight - 100; // Espace sous la toolbar
+
+    const scaleW = availableW / abacusFullWidth;
+    // Hauteur estimée : Valeur (60) + Boulier (56 * rowsCount)
+    const currentAbacusH = 60 + (56 * rowsCount);
+    const scaleH = availableH / currentAbacusH;
+
+    currentScale = Math.min(1, scaleW, scaleH);
+    scaler.style.transform = `scale(${currentScale})`;
+    resizeCanvas();
   }
 
-  function startCacheDrag(e) {
-    e.preventDefault();
-    cache.setPointerCapture(e.pointerId);
-    const onMove = (ev) => {
-      const rect = frame.getBoundingClientRect();
-      let newW = rect.right - ev.clientX;
-      cache.style.width = Math.max(0, Math.min(FRAME_W, newW)) + "px";
-    };
-    cache.onpointermove = onMove;
-    cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
-  }
-
-  function toggleColorMode() {
-    isBlue = !isBlue;
-    document.getElementById('btn-color').textContent = isBlue ? "⚪ Blanc" : "🔵 Bleu";
-    document.querySelectorAll('.bead.white').forEach(b => b.classList.toggle('blue-mode', isBlue));
-  }
-
-  let activeDrag = null;
   function startDrag(e) {
     if (isPen) return;
     const bead = e.target;
@@ -204,7 +196,8 @@
   window.addEventListener('pointermove', (e) => {
     if (!activeDrag) return;
     const { rowIdx, beadIdx, rowEl, startX } = activeDrag;
-    const dx = e.clientX - startX;
+    // On ajuste le déplacement dx par le facteur de scale
+    const dx = (e.clientX - startX) / currentScale;
     const beads = rowEl.querySelectorAll('.bead');
     if (beadIdx >= states[rowIdx]) { 
       for (let i = states[rowIdx]; i <= beadIdx; i++) moveVisual(beads[i], i, dx, true);
@@ -224,8 +217,7 @@
   window.addEventListener('pointerup', (e) => {
     if (!activeDrag) return;
     const { rowIdx, beadIdx, rowEl } = activeDrag;
-    const beads = rowEl.querySelectorAll('.bead');
-    const currentPos = parseFloat(beads[beadIdx].style.left);
+    const currentPos = parseFloat(rowEl.querySelectorAll('.bead')[beadIdx].style.left);
     if (beadIdx >= states[rowIdx]) { if (currentPos < (FRAME_W/2) + (beadIdx*5)) states[rowIdx] = beadIdx + 1; }
     else { if (currentPos > (FRAME_W/2) - ((10-beadIdx)*5)) states[rowIdx] = beadIdx; }
     activeDrag = null; updateBeads(true);
@@ -243,11 +235,17 @@
     totalDiv.innerText = showVal ? states.reduce((a, b) => a + b, 0) : "";
   }
 
+  function toggleCache() { isCache = !isCache; cache.style.display = isCache ? 'block' : 'none'; document.getElementById('btn-cache').classList.toggle('active', isCache); }
+  function startCacheDrag(e) { e.preventDefault(); cache.setPointerCapture(e.pointerId);
+    cache.onpointermove = (ev) => { const rect = frame.getBoundingClientRect(); cache.style.width = Math.max(0, Math.min(FRAME_W, (rect.right - ev.clientX)/currentScale)) + "px"; };
+    cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
+  }
+
   function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; ctx.lineCap = 'round'; ctx.lineWidth = 4; }
   canvas.onpointerdown = (e) => { if (isPen) { drawing = true; ctx.beginPath(); ctx.strokeStyle = penCol; ctx.moveTo(e.clientX, e.clientY); } };
   canvas.onpointermove = (e) => { if (isPen && drawing) { ctx.lineTo(e.clientX, e.clientY); ctx.stroke(); } };
   canvas.onpointerup = () => drawing = false;
-  let drawing = false;
+  let drawing = false, activeDrag = null;
 
   function allTo(n) { states.fill(n); updateBeads(true); }
   function set50() { for(let i=0; i<10; i++) states[i] = (i < 5) ? 10 : 0; updateBeads(true); }
@@ -255,9 +253,10 @@
   function togglePen() { isPen = !isPen; canvas.classList.toggle('active', isPen); document.getElementById('btn-pen').classList.toggle('active', isPen); }
   function setCol(c, el) { penCol = c; document.querySelectorAll('.color-dot').forEach(d => d.classList.remove('active')); el.classList.add('active'); }
   function clearDraw() { ctx.clearRect(0, 0, canvas.width, canvas.height); }
+  function toggleColorMode() { isBlue = !isBlue; document.getElementById('btn-color').textContent = isBlue ? "⚪ Blanc" : "🔵 Bleu"; document.querySelectorAll('.bead.white').forEach(b => b.classList.toggle('blue-mode', isBlue)); }
 
   document.getElementById('row-range').oninput = (e) => { rowsCount = parseInt(e.target.value); document.getElementById('row-val').innerText = rowsCount; init(); };
-  window.onresize = resizeCanvas;
+  window.addEventListener('resize', autoScale);
   init();
 </script>
 </body>
