--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-<title>Boulier Rekenrek - Correction Finale</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
+<title>Boulier Rekenrek - Version Finale Multi-Support</title>
 <style>
   :root {
     --bg: #1a1a1a;
@@ -21,53 +21,49 @@
     overflow: hidden; touch-action: none;
   }
 
+  /* Toolbar centrée avec espaces uniformes */
   .toolbar {
     position: absolute; top: 0; left: 0; right: 0; height: auto; min-height: 60px;
     background: var(--ui); display: flex; flex-wrap: wrap; align-items: center; 
-    justify-content: center; gap: 25px; z-index: 1000; padding: 5px 10px;
+    justify-content: center; gap: 20px; z-index: 1000; padding: 5px 15px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.5);
   }
 
-  .toolbar-group { display: flex; align-items: center; gap: 10px; }
+  .toolbar-group { display: flex; align-items: center; gap: 8px; }
 
   .btn {
-    border: none; background: #444; color: white; padding: 8px 12px;
-    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 13px;
+    border: none; background: #444; color: white; padding: 7px 10px;
+    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 12px;
   }
   .btn.active { background: var(--accent); outline: 2px solid white; }
   .btn-clear { background: #722; }
 
   #main-container {
     position: relative; width: 100vw; height: 100vh;
-    background: var(--bg);
+    display: flex; flex-direction: column; align-items: center;
+    justify-content: center;
   }
 
-  /* LE SCALER : Positionné de manière absolue pour éviter les décalages de centrage */
+  /* LE SCALER : Pour ajuster la taille sur iPad et Téléphone sans déformer les billes */
   #scaler {
-    position: absolute;
-    left: 50%;
-    top: calc(50% + 30px); /* Ajusté pour laisser la place à la toolbar */
-    width: 820px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    position: absolute; left: 50%; width: 880px; /* 820 + 30 + 30 */
+    display: flex; flex-direction: column; align-items: center;
     transform-origin: center center;
     pointer-events: none;
   }
 
   #total-display { 
     font-size: 46px; font-weight: bold; color: var(--accent); 
-    min-height: 60px; margin-bottom: 10px; text-shadow: 0 2px 4px black;
+    min-height: 60px; margin-top: 15px; margin-bottom: 5px; text-shadow: 0 2px 4px black;
   }
 
   #abacus-frame {
-    position: relative; width: 820px;
+    position: relative; width: 820px; /* Largeur verrouillée */
     border-left: 30px solid var(--wood); border-right: 30px solid var(--wood);
-    pointer-events: auto;
-    background: transparent;
+    pointer-events: auto; box-sizing: content-box;
   }
 
-  .row { position: relative; height: 56px; width: 100%; pointer-events: auto; }
+  .row { position: relative; height: 56px; width: 820px; pointer-events: auto; }
   .rod { position: absolute; width: 100%; height: 4px; background: var(--rod); top: 50%; transform: translateY(-50%); z-index: 1; }
 
   #cache-curtain {
@@ -79,8 +75,7 @@
     content: "↔"; position: absolute; left: -25px; top: 50%; 
     background: #444; border-radius: 50%; width: 50px; height: 50px; 
     display: flex; align-items: center; justify-content: center; 
-    font-weight: bold; font-size: 24px; color: white;
-    transform: translateY(-50%);
+    font-weight: bold; font-size: 24px; color: white; transform: translateY(-50%);
   }
 
   .bead {
@@ -88,7 +83,6 @@
     top: 50%; transform: translateY(-50%); z-index: 5;
     cursor: grab; touch-action: none;
     box-shadow: inset -3px -3px 6px rgba(0,0,0,0.4), 2px 2px 5px rgba(0,0,0,0.5);
-    margin: 0; padding: 0; border: none;
   }
   .bead.red { background: radial-gradient(circle at 30% 30%, #ff5f5f, #a00); }
   .bead.white { background: radial-gradient(circle at 30% 30%, var(--bead-white), #bbb); }
@@ -105,8 +99,8 @@
 
 <div class="toolbar">
   <div class="toolbar-group">
-    <input type="range" id="row-range" min="1" max="10" value="10" style="width:70px">
-    <span id="row-val" style="font-weight:bold; font-size:16px; color:var(--accent)">10</span>
+    <input type="range" id="row-range" min="1" max="10" value="10" style="width:60px">
+    <span id="row-val" style="font-weight:bold; font-size:14px; color:var(--accent)">10</span>
   </div>
   <div class="toolbar-group">
     <button class="btn" onclick="allTo(0)">0</button>
@@ -162,6 +156,7 @@
       row.innerHTML = `<div class="rod"></div>`;
       for (let b = 0; b < 10; b++) {
         const bead = document.createElement('div');
+        // Inversion des couleurs 5+5
         const isRed = (r < 5) ? (b < 5) : (b >= 5);
         bead.className = `bead ${isRed ? 'red' : 'white'} ${isBlue ? 'blue-mode' : ''}`;
         bead.dataset.idx = b; bead.onpointerdown = startDrag;
@@ -174,22 +169,25 @@
   }
 
   function autoScale() {
-    const abacusFullWidth = 820 + 60;
-    const margin = 20;
-    const availableW = window.innerWidth - margin;
-    const toolbarH = document.querySelector('.toolbar').offsetHeight;
+    const toolbar = document.querySelector('.toolbar');
+    const toolbarH = toolbar ? toolbar.offsetHeight : 65;
+    const availableW = window.innerWidth - 40;
     const availableH = window.innerHeight - toolbarH - 30;
 
-    const scaleW = availableW / abacusFullWidth;
-    // Hauteur totale fixe : Display (60) + Lignes (56*N) + Sécurité
-    const currentAbacusH = 70 + (56 * rowsCount); 
-    const scaleH = availableH / currentAbacusH;
+    const contentW = 880; 
+    const contentH = 80 + (56 * rowsCount);
 
-    currentScale = Math.min(1, scaleW, scaleH);
+    const sW = availableW / contentW;
+    const sH = availableH / contentH;
+    currentScale = Math.min(1, sW, sH) * 0.98;
+
     scaler.style.transform = `translate(-50%, -50%) scale(${currentScale})`;
     
-    // On recentre dynamiquement sous la barre
-    scaler.style.top = `calc(50% + ${toolbarH/2}px)`;
+    // Positionne le centre du boulier au milieu de la zone sous la toolbar
+    const zoneCenterY = toolbarH + (availableH / 2) + 15;
+    scaler.style.top = `${zoneCenterY}px`;
+    scaler.style.left = `50%`;
+    
     resizeCanvas();
   }
 
