--- a/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
+++ b/outils/bouliers/boulier-cycle-2/boulier-cycle2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-<title>Boulier Rekenrek - Fix Paysage Final</title>
+<title>Boulier Rekenrek - Version Finale Certifiée</title>
 <style>
   :root {
     --bg: #1a1a1a;
@@ -16,49 +16,51 @@
   }
 
   body, html { 
-    margin: 0; padding: 0; width: 100%; height: 100%; 
+    margin: 0; padding: 0; width: 100%; height: 100dvh; 
     background: var(--bg); color: white; font-family: sans-serif;
     overflow: hidden; touch-action: none;
   }
 
   .toolbar {
-    position: relative; height: auto; min-height: 60px;
+    position: relative; width: 100%; min-height: 50px;
     background: var(--ui); display: flex; flex-wrap: wrap; align-items: center; 
-    justify-content: center; gap: 20px; z-index: 1000; padding: 5px 15px;
+    justify-content: center; gap: 15px; z-index: 1000; padding: 5px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.5);
   }
 
   .toolbar-group { display: flex; align-items: center; gap: 8px; }
 
   .btn {
-    border: none; background: #444; color: white; padding: 7px 10px;
-    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 12px;
+    border: none; background: #444; color: white; padding: 6px 10px;
+    border-radius: 6px; cursor: pointer; font-weight: bold; font-size: 11px;
   }
-  .btn.active { background: var(--accent); outline: 2px solid white; }
+  .btn.active { background: var(--accent); outline: 1px solid white; }
 
+  /* Zone principale qui prend tout le reste de l'écran */
   #main-container {
-    position: relative; width: 100vw; 
-    height: calc(100vh - 65px); /* Toute la zone sous la barre */
+    position: relative; width: 100%; height: calc(100dvh - 60px);
     display: flex; flex-direction: column; align-items: center;
-    justify-content: center; overflow: hidden;
+    overflow: hidden;
   }
 
+  /* LE SCALER : On le place en haut avec une petite marge */
   #scaler {
+    margin-top: 10px;
     display: flex; flex-direction: column; align-items: center;
-    transform-origin: center center;
+    transform-origin: top center;
     pointer-events: none;
   }
 
   #total-display { 
-    font-size: 42px; font-weight: bold; color: var(--accent); 
-    height: 50px; margin-bottom: 5px; text-shadow: 0 2px 4px black;
-    display: flex; align-items: center; justify-content: center;
+    font-size: 38px; font-weight: bold; color: var(--accent); 
+    height: 45px; margin-bottom: 5px; text-shadow: 0 2px 4px black;
+    display: flex; align-items: center;
   }
 
   #abacus-frame {
     position: relative; width: 820px; 
     border-left: 30px solid var(--wood); border-right: 30px solid var(--wood);
     pointer-events: auto; box-sizing: content-box;
-    background: transparent;
   }
 
   .row { position: relative; height: 56px; width: 820px; pointer-events: auto; }
@@ -69,9 +71,8 @@
     background: #000; z-index: 20; border-left: 4px solid #444; pointer-events: auto;
     display: none; cursor: ew-resize;
   }
-  
   #cache-curtain::before { 
-    content: "↔"; position: absolute; left: -10px; top: 50%; 
+    content: "↔"; position: absolute; left: -12px; top: 50%; 
     background: #444; border-radius: 50%; width: 44px; height: 44px; 
     display: flex; align-items: center; justify-content: center; 
     font-weight: bold; font-size: 20px; color: white; transform: translateY(-50%);
@@ -92,6 +93,13 @@
   
   .color-dot { width: 22px; height: 22px; border-radius: 50%; cursor: pointer; border: 2px solid #555; }
   .color-dot.active { border-color: white; transform: scale(1.1); }
+
+  /* Mode Paysage Serré */
+  @media (orientation: landscape) and (max-height: 450px) {
+    #total-display { font-size: 24px; height: 30px; }
+    .row { height: 50px; }
+    .toolbar { min-height: 40px; padding: 2px; }
+  }
 </style>
 </head>
 <body>
@@ -111,7 +119,7 @@
     <button class="btn" id="btn-cache" onclick="toggleCache()">🌑 Cache</button>
     <button class="btn" id="btn-val" onclick="toggleVal()">Valeur</button>
   </div>
-  <div class="toolbar-group" style="gap:12px">
+  <div class="toolbar-group" style="gap:10px">
     <button class="btn" id="btn-pen" onclick="togglePen()">✏️ Stylo</button>
     <div class="color-dot active" style="background:#0f6cf9" onclick="setCol('#0f6cf9', this)"></div>
     <div class="color-dot" style="background:#ffeb3b" onclick="setCol('#ffeb3b', this)"></div>
@@ -145,11 +153,11 @@
   const BEAD_W = 38, GAP = 2, FRAME_W = 820;
 
   function init() {
-    const curWidth = cache.style.width;
+    const curW = cache.style.width;
     frame.innerHTML = '';
     frame.appendChild(cache);
     cache.onpointerdown = startCacheDrag;
-    if (isCache) cache.style.width = curWidth || "0px";
+    if (isCache) cache.style.width = curW || "0px";
 
     for (let r = 0; r < rowsCount; r++) {
       const row = document.createElement('div'); row.className = 'row'; row.dataset.row = r;
@@ -168,17 +176,18 @@
   }
 
   function autoScale() {
-    const availableW = window.innerWidth - 40;
+    const availableW = window.innerWidth - 20;
     const availableH = window.innerHeight - topBar.offsetHeight - 20;
 
     const contentW = 880; 
-    const contentH = 50 + (56 * rowsCount) + 10; // Total display + Abacus rows + padding
+    const isSmallLandscape = window.innerHeight < 450;
+    const rH = isSmallLandscape ? 50 : 56;
+    const contentH = (isSmallLandscape ? 30 : 50) + (rH * rowsCount);
 
     const sW = availableW / contentW;
     const sH = availableH / contentH;
     
-    // On prend le plus petit des deux pour que ça tienne en largeur ET hauteur
-    currentScale = Math.min(1, sW, sH);
+    currentScale = Math.min(1, sW, sH) * 0.98;
 
     scaler.style.transform = `scale(${currentScale})`;
     resizeCanvas();
@@ -187,10 +196,8 @@
   function startDrag(e) {
     if (isPen) return;
     const bead = e.target;
-    const rowIdx = parseInt(bead.parentElement.dataset.row);
-    const beadIdx = parseInt(bead.dataset.idx);
     bead.setPointerCapture(e.pointerId);
-    activeDrag = { rowIdx, beadIdx, rowEl: bead.parentElement, startX: e.clientX };
+    activeDrag = { rowIdx: parseInt(bead.parentElement.dataset.row), beadIdx: parseInt(bead.dataset.idx), rowEl: bead.parentElement, startX: e.clientX };
   }
 
   window.addEventListener('pointermove', (e) => {
@@ -208,12 +215,11 @@
   function moveVisual(b, idx, dx, fromRight) {
     let base = fromRight ? (FRAME_W - (10 - idx) * (BEAD_W + GAP)) : (idx * (BEAD_W + GAP));
     let pos = base + dx;
-    let min = idx * (BEAD_W + GAP), max = FRAME_W - (10 - idx) * (BEAD_W + GAP);
     b.style.transition = 'none';
-    b.style.left = Math.max(min, Math.min(max, pos)) + "px";
+    b.style.left = Math.max(idx * (BEAD_W + GAP), Math.min(FRAME_W - (10 - idx) * (BEAD_W + GAP), pos)) + "px";
   }
 
-  window.addEventListener('pointerup', (e) => {
+  window.addEventListener('pointerup', () => {
     if (!activeDrag) return;
     const { rowIdx, beadIdx, rowEl } = activeDrag;
     const currentPos = parseFloat(rowEl.querySelectorAll('.bead')[beadIdx].style.left);
@@ -224,11 +230,9 @@
 
   function updateBeads(animate) {
     document.querySelectorAll('.row').forEach((row, r) => {
-      const bds = row.querySelectorAll('.bead');
-      bds.forEach((b, i) => {
-        b.style.transition = animate ? 'left 0.25s cubic-bezier(0.2, 0, 1, 1)' : 'none';
-        if (i < states[r]) b.style.left = (i * (BEAD_W + GAP)) + "px";
-        else b.style.left = (FRAME_W - (10 - i) * (BEAD_W + GAP)) + "px";
+      row.querySelectorAll('.bead').forEach((b, i) => {
+        b.style.transition = animate ? 'left 0.2s ease-out' : 'none';
+        b.style.left = (i < states[r]) ? (i * (BEAD_W + GAP)) + "px" : (FRAME_W - (10 - i) * (BEAD_W + GAP)) + "px";
       });
     });
     totalDiv.innerText = showVal ? states.reduce((a, b) => a + b, 0) : "";
@@ -236,34 +240,23 @@
 
   function toggleCache() { isCache = !isCache; cache.style.display = isCache ? 'block' : 'none'; document.getElementById('btn-cache').classList.toggle('active', isCache); }
   function startCacheDrag(e) { e.preventDefault(); cache.setPointerCapture(e.pointerId);
-    cache.onpointermove = (ev) => { 
-      const rect = frame.getBoundingClientRect(); 
-      // Calcul du mouvement corrigé par l'échelle réelle affichée
-      const actualFrameW = FRAME_W * currentScale;
-      const xOffset = (ev.clientX - rect.left) / currentScale;
-      cache.style.width = Math.max(0, Math.min(FRAME_W, FRAME_W - xOffset)) + "px"; 
-    };
+    cache.onpointermove = (ev) => { const rect = frame.getBoundingClientRect(); cache.style.width = Math.max(0, Math.min(FRAME_W, (rect.right - ev.clientX)/currentScale)) + "px"; };
     cache.onpointerup = () => { cache.onpointermove = null; cache.releasePointerCapture(e.pointerId); };
   }
 
-  function resizeCanvas() { 
-    canvas.width = window.innerWidth; canvas.height = window.innerHeight; 
-    ctx.lineCap = 'round'; 
-  }
-
+  function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; ctx.lineCap = 'round'; }
   let drawing = false, activeDrag = null;
   canvas.onpointerdown = (e) => { 
     if (!isPen) return;
     drawing = true; 
     const rect = canvas.getBoundingClientRect();
-    ctx.beginPath(); ctx.strokeStyle = penCol; 
-    ctx.moveTo(e.clientX - rect.left, e.clientY - rect.top); 
+    ctx.beginPath(); ctx.strokeStyle = penCol; ctx.moveTo(e.clientX - rect.left, e.clientY - rect.top); 
   };
   canvas.onpointermove = (e) => { 
     if (isPen && drawing) { 
       const rect = canvas.getBoundingClientRect();
       ctx.lineTo(e.clientX - rect.left, e.clientY - rect.top); 
-      ctx.lineWidth = window.innerWidth < 1024 ? 2.5 : 4;
+      ctx.lineWidth = window.innerWidth < 800 ? 2.5 : 4;
       ctx.stroke(); 
     } 
   };
